--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
-<!DOCTYPE html>
-<html>
+<HTml>
 
-<head></head>
-<link rel="stylesheet" href
+<head>
+    <title> Aluraflix </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+
+</head>
+
+<body>
+    <header>Aluraflix</header>
+    <section>
+        <div class="chamada-texto">
+            <h1>Para todos os garotos que ja amei</h1>
+            <p>Para todos os garfotos que ja amei e legal</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CK-g0OqzQHQ?si=b4dv2r3ce9dIcZx_"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+</body>
+
+</HTml>
