--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+    <section>
+        <h2>Filmes e series</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=i8gtnbY7R9g">
+                <img src="https://img.youtube.com/vi/i8gtnbY7R9g/maxresdefault.jpg" />
+                
+            <a href="https://www.youtube.com/watch?v=9eJOE_s1ZaE">
+                <img src="https://img.youtube.com/vi/9eJOE_s1ZaE/maxresdefault.jpg" />
+
+            <a href="https://www.youtube.com/watch?v=nGWgQ71MBoE">
+                    <img src="https://img.youtube.com/vi/nGWgQ71MBoE/maxresdefault.jpg" />
+
+            <a href="https://www.youtube.com/watch?v=YwY86TlfDI0">
+                        <img src="https://img.youtube.com/vi/YwY86TlfDI0/maxresdefault.jpg" />
+
+            <a href="https://www.youtube.com/watch?v=I8DehrWnZ4c">
+                            <img src="https://img.youtube.com/vi/I8DehrWnZ4c/maxresdefault.jpg" />
+        </div>
+      </section>
 </body>
 
 </HTml>
